content/rendering-with-batch/assets/starting_stack.yaml
Resources:
  Vpc8378EB38:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: DevEnvVPC
    Metadata:
      aws:cdk:path: RenderingWithBatch-DevEnv/Vpc/Resource
  VpcDevEnvVPCSubnetGroupSubnet1Subnet3616B197:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: DevEnvVPCSubnetGroup
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: RenderingWithBatch-DevEnv/Vpc/DevEnvVPCSubnetGroupSubnet1
      VpcId:
        Ref: Vpc8378EB38
    Metadata:
      aws:cdk:path: RenderingWithBatch-DevEnv/Vpc/DevEnvVPCSubnetGroupSubnet1/Subnet
  VpcDevEnvVPCSubnetGroupSubnet1RouteTableD6E80506:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: RenderingWithBatch-DevEnv/Vpc/DevEnvVPCSubnetGroupSubnet1
      VpcId:
        Ref: Vpc8378EB38
    Metadata:
      aws:cdk:path: RenderingWithBatch-DevEnv/Vpc/DevEnvVPCSubnetGroupSubnet1/RouteTable
  VpcDevEnvVPCSubnetGroupSubnet1RouteTableAssociation8BF44D4F:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VpcDevEnvVPCSubnetGroupSubnet1RouteTableD6E80506
      SubnetId:
        Ref: VpcDevEnvVPCSubnetGroupSubnet1Subnet3616B197
    Metadata:
      aws:cdk:path: RenderingWithBatch-DevEnv/Vpc/DevEnvVPCSubnetGroupSubnet1/RouteTableAssociation
  VpcDevEnvVPCSubnetGroupSubnet1DefaultRoute3128731D:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: VpcIGWD7BA715C
      RouteTableId:
        Ref: VpcDevEnvVPCSubnetGroupSubnet1RouteTableD6E80506
    DependsOn:
      - VpcVPCGWBF912B6E
    Metadata:
      aws:cdk:path: RenderingWithBatch-DevEnv/Vpc/DevEnvVPCSubnetGroupSubnet1/DefaultRoute
  VpcDevEnvVPCSubnetGroupSubnet2Subnet4CAD2A48:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: DevEnvVPCSubnetGroup
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: RenderingWithBatch-DevEnv/Vpc/DevEnvVPCSubnetGroupSubnet2
      VpcId:
        Ref: Vpc8378EB38
    Metadata:
      aws:cdk:path: RenderingWithBatch-DevEnv/Vpc/DevEnvVPCSubnetGroupSubnet2/Subnet
  VpcDevEnvVPCSubnetGroupSubnet2RouteTable6C55E44E:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: RenderingWithBatch-DevEnv/Vpc/DevEnvVPCSubnetGroupSubnet2
      VpcId:
        Ref: Vpc8378EB38
    Metadata:
      aws:cdk:path: RenderingWithBatch-DevEnv/Vpc/DevEnvVPCSubnetGroupSubnet2/RouteTable
  VpcDevEnvVPCSubnetGroupSubnet2RouteTableAssociation309B574D:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VpcDevEnvVPCSubnetGroupSubnet2RouteTable6C55E44E
      SubnetId:
        Ref: VpcDevEnvVPCSubnetGroupSubnet2Subnet4CAD2A48
    Metadata:
      aws:cdk:path: RenderingWithBatch-DevEnv/Vpc/DevEnvVPCSubnetGroupSubnet2/RouteTableAssociation
  VpcDevEnvVPCSubnetGroupSubnet2DefaultRouteCDABA07D:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: VpcIGWD7BA715C
      RouteTableId:
        Ref: VpcDevEnvVPCSubnetGroupSubnet2RouteTable6C55E44E
    DependsOn:
      - VpcVPCGWBF912B6E
    Metadata:
      aws:cdk:path: RenderingWithBatch-DevEnv/Vpc/DevEnvVPCSubnetGroupSubnet2/DefaultRoute
  VpcIGWD7BA715C:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: DevEnvVPC
    Metadata:
      aws:cdk:path: RenderingWithBatch-DevEnv/Vpc/IGW
  VpcVPCGWBF912B6E:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId:
        Ref: VpcIGWD7BA715C
      VpcId:
        Ref: Vpc8378EB38
    Metadata:
      aws:cdk:path: RenderingWithBatch-DevEnv/Vpc/VPCGW
  VpcRestrictDefaultSecurityGroupCustomResourceC73DA2BE:
    Type: Custom::VpcRestrictDefaultSG
    Properties:
      ServiceToken:
        Fn::GetAtt:
          - CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E
          - Arn
      DefaultSecurityGroupId:
        Fn::GetAtt:
          - Vpc8378EB38
          - DefaultSecurityGroup
      Account:
        Ref: AWS::AccountId
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: RenderingWithBatch-DevEnv/Vpc/RestrictDefaultSecurityGroupCustomResource/Default
  CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
      ManagedPolicyArns:
        - Fn::Sub: arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
      Policies:
        - PolicyName: Inline
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - ec2:AuthorizeSecurityGroupIngress
                  - ec2:AuthorizeSecurityGroupEgress
                  - ec2:RevokeSecurityGroupIngress
                  - ec2:RevokeSecurityGroupEgress
                Resource:
                  - Fn::Join:
                      - ""
                      - - "arn:"
                        - Ref: AWS::Partition
                        - ":ec2:"
                        - Ref: AWS::Region
                        - ":"
                        - Ref: AWS::AccountId
                        - :security-group/
                        - Fn::GetAtt:
                            - Vpc8378EB38
                            - DefaultSecurityGroup
    Metadata:
      aws:cdk:path: RenderingWithBatch-DevEnv/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role
  CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        S3Bucket:
          Fn::Sub: cdk-hnb659fds-assets-${AWS::AccountId}-${AWS::Region}
        S3Key: ee7de53d64cc9d6248fa6aa550f92358f6c907b5efd6f3298aeab1b5e7ea358a.zip
      Timeout: 900
      MemorySize: 128
      Handler: __entrypoint__.handler
      Role:
        Fn::GetAtt:
          - CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0
          - Arn
      Runtime: nodejs18.x
      Description: Lambda function for removing all inbound/outbound rules from the VPC default security group
    DependsOn:
      - CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0
    Metadata:
      aws:cdk:path: RenderingWithBatch-DevEnv/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler
      aws:asset:path: asset.ee7de53d64cc9d6248fa6aa550f92358f6c907b5efd6f3298aeab1b5e7ea358a
      aws:asset:property: Code
  DevEnvSecurityGroupB93E6330:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: RenderingWithBatch-DevEnv/DevEnvSecurityGroup
      GroupName: DevEnvSecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 43.196.20.40/29
          Description: from 43.196.20.40/29:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 43.192.155.8/29
          Description: from 43.192.155.8/29:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 18.252.4.0/30
          Description: from 18.252.4.0/30:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 15.200.28.80/30
          Description: from 15.200.28.80/30:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 13.244.121.196/30
          Description: from 13.244.121.196/30:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 43.198.192.104/29
          Description: from 43.198.192.104/29:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 3.112.23.0/29
          Description: from 3.112.23.0/29:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 13.209.1.56/29
          Description: from 13.209.1.56/29:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 15.168.105.160/29
          Description: from 15.168.105.160/29:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 13.233.177.0/29
          Description: from 13.233.177.0/29:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 18.60.252.248/29
          Description: from 18.60.252.248/29:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 3.0.5.32/29
          Description: from 3.0.5.32/29:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 13.239.158.0/29
          Description: from 13.239.158.0/29:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 43.218.193.64/29
          Description: from 43.218.193.64/29:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 16.50.248.80/29
          Description: from 16.50.248.80/29:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 35.183.92.176/29
          Description: from 35.183.92.176/29:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 40.176.213.168/29
          Description: from 40.176.213.168/29:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 3.120.181.40/29
          Description: from 3.120.181.40/29:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 16.63.77.8/29
          Description: from 16.63.77.8/29:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 13.48.4.200/30
          Description: from 13.48.4.200/30:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 15.161.135.164/30
          Description: from 15.161.135.164/30:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 18.101.90.48/29
          Description: from 18.101.90.48/29:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 18.202.216.48/29
          Description: from 18.202.216.48/29:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 3.8.37.24/29
          Description: from 3.8.37.24/29:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 35.180.112.80/29
          Description: from 35.180.112.80/29:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 51.16.183.224/29
          Description: from 51.16.183.224/29:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 3.29.147.40/29
          Description: from 3.29.147.40/29:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 16.24.46.56/29
          Description: from 16.24.46.56/29:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 18.228.70.32/29
          Description: from 18.228.70.32/29:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 18.206.107.24/29
          Description: from 18.206.107.24/29:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 3.16.146.0/29
          Description: from 3.16.146.0/29:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 13.52.6.112/29
          Description: from 13.52.6.112/29:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 18.237.140.160/29
          Description: from 18.237.140.160/29:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
      VpcId:
        Ref: Vpc8378EB38
    Metadata:
      aws:cdk:path: RenderingWithBatch-DevEnv/DevEnvSecurityGroup/Resource
  DevEnvironmentInstanceRole351155D4:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
        Version: "2012-10-17"
      Tags:
        - Key: Name
          Value: DevelopmentEnvironment
    Metadata:
      aws:cdk:path: RenderingWithBatch-DevEnv/DevEnvironment/InstanceRole/Resource
  DevEnvironmentInstanceRoleDefaultPolicy1A366C03:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - batch:CreateComputeEnvironment
              - batch:CreateJobQueue
              - batch:DeleteComputeEnvironment
              - batch:DeleteJobQueue
              - batch:DeregisterJobDefinition
              - batch:DescribeComputeEnvironments
              - batch:DescribeJobDefinitions
              - batch:DescribeJobQueues
              - batch:DescribeJobs
              - batch:ListJobs
              - batch:RegisterJobDefinition
              - batch:SubmitJob
              - batch:UpdateComputeEnvironment
              - batch:UpdateJobQueue
              - cloudformation:DescribeStacks
              - ecr:*
              - iam:PassRole
              - s3:DeleteObject
              - s3:ListBucket
              - s3:PutObject
              - states:StartExecution
            Effect: Allow
            Resource: "*"
        Version: "2012-10-17"
      PolicyName: DevEnvironmentInstanceRoleDefaultPolicy1A366C03
      Roles:
        - Ref: DevEnvironmentInstanceRole351155D4
    Metadata:
      aws:cdk:path: RenderingWithBatch-DevEnv/DevEnvironment/InstanceRole/DefaultPolicy/Resource
  DevEnvironmentInstanceProfile8AF81528:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: DevEnvironmentInstanceRole351155D4
    Metadata:
      aws:cdk:path: RenderingWithBatch-DevEnv/DevEnvironment/InstanceProfile
  DevEnvironmentE47A0076:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      IamInstanceProfile:
        Ref: DevEnvironmentInstanceProfile8AF81528
      ImageId:
        Ref: SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amikernel510hvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter
      InstanceType: t2.micro
      SecurityGroupIds:
        - Fn::GetAtt:
            - DevEnvSecurityGroupB93E6330
            - GroupId
      SubnetId:
        Ref: VpcDevEnvVPCSubnetGroupSubnet1Subnet3616B197
      Tags:
        - Key: Name
          Value: DevelopmentEnvironment
      UserData:
        Fn::Base64: |-
          MIME-Version: 1.0
          Content-Type: multipart/mixed; boundary="==MYBOUNDARY=="

          --==MYBOUNDARY==
          Content-Type: text/x-shellscript; charset="us-ascii"

          #!/bin/bash
          echo "ECS_ENABLE_SPOT_INSTANCE_DRAINING=true" >> /etc/ecs/ecs.config
          echo "ECS_CONTAINER_STOP_TIMEOUT=90s" >> /etc/ecs/ecs.config
          echo "ECS_ENABLE_CONTAINER_METADATA=true" >> /etc/ecs/ecs.config

          --==MYBOUNDARY==--
    DependsOn:
      - DevEnvironmentInstanceRoleDefaultPolicy1A366C03
      - DevEnvironmentInstanceRole351155D4
    Metadata:
      aws:cdk:path: RenderingWithBatch-DevEnv/DevEnvironment/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAA/3VQy26DQAz8ltw324YoH0A5RDkVQZVrZRaTOAEv2vUWIcS/Vzxa1ENPnhmPZixH+nA86dcddH5vyue+pkIPuYB5Kuj854Am0sO1NSqp+JomKg1FTSYPBaNM2oYyGwQ/oKhx0zct9t4aAiHLv+YJXFjQMcoZBDvo15qVxSJg7g2yqBxNcCT92dnQzgV/hAt7ATZr5IJHRdDoIbPLRfNMbU1mbtnQjz91tqIax1Fl6G1wU1rwYpuNVvzPKnX2i0p0b+BRxd6j5AI34ttcBQ4aFHQTeQ/ShvlhieWSpoeMKu3lbvnlqA+RPu0enmjvAgs1qLNlfgPwBItuqAEAAA==
    Metadata:
      aws:cdk:path: RenderingWithBatch-DevEnv/CDKMetadata/Default
    Condition: CDKMetadataAvailable
Parameters:
  SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amikernel510hvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-kernel-5.10-hvm-x86_64-gp2
  BootstrapVersion:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /cdk-bootstrap/hnb659fds/version
    Description: Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]
Outputs:
  DevEnvironmentConnectionURL:
    Value:
      Fn::Join:
        - ""
        - - https://
          - Ref: AWS::Region
          - .console.aws.amazon.com/ec2-instance-connect/ssh?region=
          - Ref: AWS::Region
          - "&connType=standard&instanceId="
          - Ref: DevEnvironmentE47A0076
          - "&osUser=ec2-user&sshPort=22"
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - af-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - il-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - me-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
